# DiplomaProject

./: .gitignore  DiplomaProject.sln  README.md  docker-compose.yml
.github/workflows/: azure-container-webapp.yml  docker-image.yml
DiplomaProject.Application/: BaseCommand.cs  BaseQuery.cs  DiplomaProject.Application.csproj  GlobalUsings.cs
DiplomaProject.Application/Exceptions/: BadRequestException.cs  InvalidSortPropertyException.cs  NotFoundException.cs
DiplomaProject.Application/Extensions/: MapperExtensions.cs
DiplomaProject.Application/Interfaces/: IDbInitializer.cs
DiplomaProject.Domain/: DiplomaProject.Domain.csproj  GlobalUsings.cs
DiplomaProject.Infrastructure.Persistence/: DiplomaProject.Infrastructure.Persistence.csproj  GlobalUsings.cs  RepositoryModule.cs  Utilities.cs
DiplomaProject.Infrastructure.Shared/: .gitignore  DiplomaProject.Infrastructure.Shared.csproj  GlobalUsings.cs
DiplomaProject.Infrastructure.Shared/Encryption/: CMakeLists.txt  Encryption.cs  EncryptionService.cs  utils.h
DiplomaProject.Infrastructure.Shared/Encryption/aes/: aes.c  aes.h
DiplomaProject.Infrastructure.Shared/Encryption/rsa/: rsa.c  rsa.h
DiplomaProject.Infrastructure.Shared/Encryption/shared/: mainFunctions.c  mainFunctions.h
DiplomaProject.Packages/: DiplomaProject.Packages.csproj
DiplomaProject.UnitTests/: DiplomaProject.UnitTests.csproj
DiplomaProject.WebApi/: DiplomaProject.WebApi.csproj  Dockerfile  GlobalUsings.cs  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json
(+194 files in other folders)
